--- a/clusters/staging/onboard-projects.yaml
+++ b/clusters/staging/onboard-projects.yaml
@@ -1,15 +1,13 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: projects
   namespace: flux-system
 spec:
-  interval: 10m0s
-  path: ./projects/staging
-  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+  path: ./projects/overlays/staging
+  interval: 10m
+  prune: true
   validation: client
-
