--- a/projects/base/facebooc/facebooc-deploy-kustomization.yaml
+++ b/projects/base/facebooc/facebooc-deploy-kustomization.yaml
@@ -1,16 +1,14 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: facebooc-deploy
   namespace: facebooc
 spec:
-  interval: 1m0s
-  path: ./flux
-  prune: false
-  serviceAccountName: facebooc
-  targetNamespace: facebooc
   sourceRef:
     kind: GitRepository
     name: facebooc-deploy
-
+  path: ./flux
+  interval: 1m
+  targetNamespace: facebooc
+  serviceAccountName: facebooc
+  prune: false
