--- a/projects/overlays/staging/kustomization.yaml
+++ b/projects/overlays/staging/kustomization.yaml
@@ -2,10 +2,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/facebooc
+  - ../../base/instavote
 patches:
   - target:
       kind: Kustomization
       name: facebooc-deploy
+    patch: |-
+      - op: replace
+        path: /spec/path
+        value: ./flux/staging
+  - target:
+      kind: Kustomization
+      name: instavote-deploy
     patch: |-
       - op: replace
         path: /spec/path
