fix: set correct path

--- a/projects/overlays/staging/kustomization.yaml
+++ b/projects/overlays/staging/kustomization.yaml
@@ -17,4 +17,4 @@ patches:
     patch: |-
       - op: replace
         path: /spec/path
-        value: ./flux/staging
+        value: ./flux/overlays/staging
